Port plugin to sbt {1.0.x, 0.13.16} [wip]